--- a/.gitignore
+++ b/.gitignore
@@ -195,10 +195,8 @@ embedding_logs/
 embedding_logs
 
 
-agents/
-chunking/
+Module\ 1/
+Module\ 2/
+Module\ 4/
+Module\ 5/
 
-Module1/
-Module2/
-Module4/
-Module5/
